# rocketgram

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  HISTORY.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: master.yml  publish.yml  test.yml
rocketgram/: __init__.py  bot.py  context.py  errors.py  exceptions.py  request.py  requests.py  types.py  update.py  version.py
rocketgram/api/: __init__.py  add_sticker_to_set.py  animation.py  answer_callback_query.py  answer_inline_query.py  answer_pre_checkout_query.py  answer_shipping_query.py  answer_web_app_query.py  approve_chat_join_request.py  audio.py  ban_chat_member.py  ban_chat_sender_chat.py  bot_command.py  bot_command_scope.py  bot_command_scope_all_chat_administrators.py  bot_command_scope_all_group_chats.py  bot_command_scope_all_private_chats.py  bot_command_scope_chat.py  bot_command_scope_chat_administrators.py  bot_command_scope_chat_member.py  bot_command_scope_default.py  bot_description.py  bot_name.py  bot_short_description.py  callback_query.py  chat.py  chat_action_type.py  chat_administrator_rights.py  chat_boost_removed.py  chat_invite_link.py  chat_join_request.py  chat_location.py  chat_member.py  chat_member_status_type.py  chat_member_updated.py  chat_permissions.py  chat_photo.py  chat_shared.py  chat_type.py  chosen_inline_result.py  (+250 more)
rocketgram/connectors/: __init__.py  aiohttp.py  aiohttpconnector.py  baseconnector.py  connector.py  tornado.py  tornadoconnector.py
rocketgram/dispatchers/: __init__.py  basedispatcher.py
rocketgram/executors/: __init__.py  aiohttp.py  executor.py  tornado.py  updates.py  webhook.py  webhooks.py
rocketgram/inlineresults/: __init__.py  contactmessagecontent.py  inlineresults.py  locationmessagecontent.py  textmessagecontent.py  venuemessagecontent.py
rocketgram/json_adapters/: __init__.py  base_adapter.py  orjson_adapter.py  standard_json_adapter.py  ujson_adapter.py
rocketgram/keyboards/: __init__.py  errors.py  exceptions.py  inline.py  keyboard.py  reply.py  replyremove.py  types.py
rocketgram/middlewares/: __init__.py  limiter.py  (+3 more)
tests/: pytest.ini  requirements.txt  test_requests.py
(+343 files in other folders)
